Finished bootloader (mostly)

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -4,26 +4,33 @@ CC          := $(GCC_PATH)/$(GCC_PREFIX)gcc
 OBJCOPY     := $(GCC_PATH)/$(GCC_PREFIX)objcopy
 OBJDUMP     := $(GCC_PATH)/$(GCC_PREFIX)objdump
 AS_FLAGS    := -march=rv32i_zicsr -mabi=ilp32
-CC_FLAGS    := -march=rv32i_zicsr -mabi=ilp32 -I../hal -O2
-CC_FLAGS    += -ffunction-sections -fdata-sections
+CC_FLAGS    := -march=rv32i_zicsr -mabi=ilp32 --std=c99 -I../hal -Os -g
+CC_FLAGS    += -ffunction-sections -fdata-sections -DF_CPU=12000000
 LINK_FLAGS  := -march=rv32i_zicsr -mabi=ilp32 -nostartfiles -Tlink.ld
 LINK_FLAGS  += -Wl,--gc-sections -Wl,--print-memory-usage
 
-ASM_SOURCES := start.S
-C_SOURCES   := bootloader.c
-TARGET      := bootloader
+ASM_SOURCES := src/start.S
+C_SOURCES   := src/bootloader.c
+TARGET      := build/bootloader
 
-OBJECTS     := $(patsubst %.c, %.o, $(C_SOURCES))
-OBJECTS     += $(patsubst %.S, %.o, $(ASM_SOURCES))
+OBJECTS     := $(patsubst src/%.c, build/%.o, $(C_SOURCES))
+OBJECTS     += $(patsubst src/%.S, build/%.o, $(ASM_SOURCES))
+OBJECTS     += build/hal.o
 BINARY      := $(patsubst %, %.hex, $(TARGET))
 LISTING     := $(patsubst %, %.lst, $(TARGET))
 
-build: $(BINARY) $(LISTING)
+all: build $(BINARY) $(LISTING)
 
-%.o: %.S
+build:
+	mkdir build
+
+build/hal.o:
+	$(CC) -c $(CC_FLAGS) -o $@ ../hal/hal.c
+
+build/%.o: src/%.S
 	$(CC) -c $(AS_FLAGS) -o $@ $<
 
-%.o: %.c
+build/%.o: src/%.c
 	$(CC) -c $(CC_FLAGS) -o $@ $<
 
 $(TARGET): $(OBJECTS)
@@ -33,9 +40,11 @@ $(TARGET): $(OBJECTS)
 	$(OBJCOPY) $< $@ -O binary
 
 %.lst: %
-	$(OBJDUMP) -d $< > $@
+	$(OBJDUMP) -S -d $< > $@
 
 clean:
 	-rm $(BINARY)
 	-rm $(LISTING)
+	-rm $(TARGET)
 	-rm $(OBJECTS)
+	-rmdir build
